# json

./: .gitignore  Makefile  Makefile.am  Makefile.test.am  README.md  TODO.md  configure.ac  gentables.c  json-by-hand.c  json.c  json.h  main.c  parser.y  scanner.l
.github/workflows/: distcheck.yml
test/: Makefile  accept.test  diff.test  jq_y_number_int_with_exp.json  jq_y_string_1_2_3_bytes_UTF-8_sequences.json  jq_y_string_accepted_surrogate_pair.json  jq_y_string_three-byte-utf-8.json  jq_y_string_uEscape.json.test  memcheck.test  mjson.tool_y_code.google.com_archive_p_json-test-suite.json  mjson.tool_y_string_last_surrogates_1_and_2.json  mjson.tool_y_string_nbsp_uescaped.json  mjson.tool_y_string_three-byte-utf-8.json  mjson.tool_y_string_u+2029_par_sep.json  mjson.tool_y_string_unicode.json  mjson.tool_y_string_unicode_2.json  mjson.tool_y_string_unicode_U+1FFFE_nonchar.json  mjson.tool_y_string_unicode_U+FDD0_nonchar.json  mjson.tool_y_string_utf8.json  mjson.tool_y_string_with_del_character.json  n_structure_unclosed_object.json.test  reject.test  run-memcheck.sh  run-tests.sh  valgrind.test  y_structure_true_in_array.json.test
test/data/: jq_y_number.json  jq_y_number_double_close_to_zero.json  jq_y_number_minus_zero.json  jq_y_number_real_capital_e.json  jq_y_number_real_exponent.json  jq_y_number_real_fraction_exponent.json  jq_y_number_real_neg_exp.json  jq_y_object_extreme_numbers.json  jq_y_object_string_unicode.json  jq_y_string_accepted_surrogate_pairs.json  jq_y_string_nbsp_uescaped.json  jq_y_string_surrogates_U+1D11E_MUSICAL_SYMBOL_G_CLEF.json  jq_y_string_two-byte-utf-8.json  jq_y_string_uEscape.json  jq_y_string_uescaped_newline.json  jq_y_string_unescaped_char_delete.json  jq_y_string_unicode.json  jq_y_string_unicode_U+10FFFE_nonchar.json  jq_y_string_unicode_U+1FFFE_nonchar.json  jq_y_string_unicode_U+200B_ZERO_WIDTH_SPACE.json  jq_y_string_unicode_U+2064_invisible_plus.json  jq_y_string_unicode_U+FDD0_nonchar.json  jq_y_string_unicode_U+FFFE_nonchar.json  jq_y_string_with_del_character.json  mjson.tool_y_object_duplicated_key.json  mjson.tool_y_object_string_unicode.json  mjson.tool_y_string_1_2_3_bytes_UTF-8_sequences.json  mjson.tool_y_string_accepted_surrogate_pair.json  mjson.tool_y_string_accepted_surrogate_pairs.json  mjson.tool_y_string_nonCharacterInUTF-8_U+FFFF.json  mjson.tool_y_string_pi.json  mjson.tool_y_string_reservedCharacterInUTF-8_U+1BFFF.json  mjson.tool_y_string_surrogates_U+1D11E_MUSICAL_SYMBOL_G_CLEF.json  mjson.tool_y_string_two-byte-utf-8.json  (+7 more)
